; ModuleID = '/home/carl/AnghaBench/linux/drivers/bluetooth/extr_hci_ll.c___ll_do_awake.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bluetooth/extr_hci_ll.c___ll_do_awake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ll_struct = type { i32, i32, i32 }
%struct.sk_buff = type { i32 }

@HCILL_AWAKE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ll_struct*)* @__ll_do_awake to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__ll_do_awake(%struct.ll_struct* %0) #0 {
  %2 = alloca %struct.ll_struct*, align 8
  %3 = alloca %struct.sk_buff*, align 8
  store %struct.ll_struct* %0, %struct.ll_struct** %2, align 8
  store %struct.sk_buff* null, %struct.sk_buff** %3, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.ll_struct*, %struct.ll_struct** %2, align 8
  %6 = getelementptr inbounds %struct.ll_struct, %struct.ll_struct* %5, i32 0, i32 2
  %7 = call %struct.sk_buff* @skb_dequeue(i32* %6)
  store %struct.sk_buff* %7, %struct.sk_buff** %3, align 8
  %8 = icmp ne %struct.sk_buff* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %4
  %10 = load %struct.ll_struct*, %struct.ll_struct** %2, align 8
  %11 = getelementptr inbounds %struct.ll_struct, %struct.ll_struct* %10, i32 0, i32 1
  %12 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %13 = call i32 @skb_queue_tail(i32* %11, %struct.sk_buff* %12)
  br label %4

14:                                               ; preds = %4
  %15 = load i32, i32* @HCILL_AWAKE, align 4
  %16 = load %struct.ll_struct*, %struct.ll_struct** %2, align 8
  %17 = getelementptr inbounds %struct.ll_struct, %struct.ll_struct* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  ret void
}

declare dso_local %struct.sk_buff* @skb_dequeue(i32*) #1

declare dso_local i32 @skb_queue_tail(i32*, %struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
